Fix controller spec request auto-filling of nested route params
