# test-app/src/app/models/Balloon.ts
@@ -1,0 +1,27 @@
+import { Decorators, DreamColumn, DreamSerializers } from '@rvoh/dream'
+import ApplicationModel from './ApplicationModel.js'
+import User from './User.js'
+
+const deco = new Decorators<typeof Balloon>()
+
+export default class Balloon extends ApplicationModel {
+  public override get table() {
+    return 'balloons' as const
+  }
+
+  public get serializers(): DreamSerializers<Balloon> {
+    return {
+      default: 'BalloonSerializer',
+      summary: 'BalloonSummarySerializer',
+    }
+  }
+
+  public id: DreamColumn<Balloon, 'id'>
+  public color: DreamColumn<Balloon, 'color'>
+  public createdAt: DreamColumn<Balloon, 'createdAt'>
+  public updatedAt: DreamColumn<Balloon, 'updatedAt'>
+
+  @deco.BelongsTo('User', { on: 'userId' })
+  public user: User
+  public userId: DreamColumn<Balloon, 'userId'>
+}
