# test-app/src/app/models/User.ts
@@ -1,5 +1,8 @@
-import { DreamColumn, DreamSerializers } from '@rvoh/dream'
+import { Decorators, DreamColumn, DreamSerializers } from '@rvoh/dream'
 import ApplicationModel from './ApplicationModel.js'
+import Balloon from './Balloon.js'
+
+const deco = new Decorators<typeof User>()
 
 export default class User extends ApplicationModel {
   public get table() {
@@ -17,4 +20,7 @@ export default class User extends ApplicationModel {
   public email: DreamColumn<User, 'email'>
   public createdAt: DreamColumn<User, 'createdAt'>
   public updatedAt: DreamColumn<User, 'updatedAt'>
+
+  @deco.HasMany('Balloon', { on: 'userId' })
+  public balloons: Balloon
 }
